syntax = "proto3";

package proto;

service CustomerService {
  rpc ListPerson(RequestType) returns (stream Person) {};
  rpc AddPerson(Person) returns (ResponseType) {}
  rpc DeletePerson(Person) returns (ResponseType) {}

}

message ResponseType {
}

message RequestType {
	string op = 1;
}

message Person {
  string name = 1;
  int32  age  = 2;
}
